# sCIN

./: .gitignore  Ebrahimi_et_al.docx  README.md  assess.py  configs.py  main.py  plot_metrics.py  plot_tsne.py  pyproject.toml  requirements.txt  sCIN-refs.bib  unpaired_plots.ipynb
configs/AE/: cite.json  pbmc.json  share.json
configs/Con-AAE/: cite.json  pbmc.json  share.json
configs/sCIN/: sCIN_cite.json  sCIN_pbmc.json  sCIN_share.json
configs/sc-cool/: sc_cool_cite.json  sc_cool_pbmc.json  sc_cool_share.json
data/: PBMC_10k.md  README.md
data/PBMC/: doubletfinder.r  wnn.r
guide/: README.md
guide/demo/: README.md  demo_paired.py  demo_unpaired.py
models/: AutoEncoder.py  Harmony.py  MOFA.py  scBridge_custom_utils.py
models/ConAAE/: conAAE.py  con_aae.py  model.py
notebooks/: Analysis.ipynb
notebooks/.ipynb_checkpoints/: Analysis-checkpoint.ipynb
sCIN/: assess.py  plots.py  sCIN.py  sCIN_8layers.py  sCIN_random_pairs.py  sCIN_random_pairs_unpaired.py  sCIN_residual.py  sCIN_unpaired.py  sCIN_v1.py  sCIN_v2.py  sCIN_v3.py  utils.py
sCIN/benchmarks/: MedR.py  assess.py  benchmarks.py  test_asw_original.py  test_unpaired.py  test_unpaired_OT.py  test_unpaired_random.py  test_unpaired_v1.py
sCIN/models/: AE.py  decoders.py  harmony.py  sCIN.py  scBridge.py
sCIN/models/ConAAE/: conAAE.py  con_aae.py
sCIN/utils/: utils.py
sc_cool/benchmarks/: MedR.py  assess.py  benchmarks.py  test_asw_original.py  test_unpaired.py  test_unpaired_OT.py  test_unpaired_random.py  test_unpaired_v1.py
sc_cool/configs/: cfg.json
sc_cool/data_processing/: plots.py
sc_cool/models/: AE.py  decoders.py  mofa.py  sCIN.py  sc_cool.py
sc_cool/models/ConAAE/: conAAE.py  con_aae.py
sc_cool/utils/: utils.py
scripts/: asw_gpBarPlot.py  asw_gpBoxPlot.py  compute_CTatK_GC_paired.py  compute_CTatK_GC_unpaired.py  compute_gene_activity.py  compute_joint_metrics_from_embs.py  eval_scBridge.py  mod_asw_gpBoxPlot.py  original_embs_tsne_plt.py  paired_RatK_ctAcc_ASW.py  run_AutoEncoder.py  run_ConAAE.py  run_Harmony.py  run_MOFA.py  run_SIMBA.py  run_SnapATAC2.py  run_decoders.py  run_metrics.py  run_paired.py  run_performance_analysis.py  run_sCIN.py  run_sCIN_random_pairs.py  run_sCIN_random_pairs_unpaired.py  run_sCIN_unpaired.py  run_sCIN_v1.py  run_sCIN_v3.py  run_scBridge.py  run_scBridge.sh  run_scButterfly.py  run_scCross.py  run_scGLUE.py  run_tech_intgn.py  run_unpaired.py  runall.py  tSNE_mod_intgn.py  unpaired_RatK_ctAcc.py
tutorial/: README.md
tutorial/demo/: demo_paired.py  demo_unpaired.py
