[tool.poetry]
name = "sCIN"
version = "0.1.0"
description = "This is a dependency file for sCIN project."
authors = ["Amir Ebrhaimi <amir.ebrahimi01@ut.ac.ir>"]

[tool.poetry.dependencies]
python = "^3.10"
anndata = "0.10.8"
anyio = "4.6.0"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
array_api_compat = "1.8"
arrow = "1.3.0"
asttokens = "2.4.1"
async-lru = "2.0.4"
attrs = "24.2.0"
babel = "2.16.0"
beautifulsoup4 = "4.12.3"
bleach = "6.1.0"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.3.2"
glmnet-py = "0.1.0b2"
h11 = "0.14.0"
h5py = "3.11.0"
httpcore = "1.0.6"
httpx = "0.27.2"
idna = "3.10"
igraph = "0.11.6"
ipykernel = "6.29.5"
ipython = "8.28.0"
ipywidgets = "8.1.5"
isoduration = "20.11.0"
jedi = "0.19.1"
Jinja2 = "3.1.4"
joblib = "1.4.2"
json5 = "0.9.25"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
jupyter-console = "6.6.3"
jupyter-events = "0.10.0"
jupyter-lsp = "2.2.5"
jupyter_client = "8.6.3"
jupyter_core = "5.7.2"
jupyter_server = "2.14.2"
jupyter_server_terminals = "0.5.3"
jupyterlab = "4.2.5"
jupyterlab_pygments = "0.3.0"
jupyterlab_server = "2.27.3"
jupyterlab_widgets = "3.0.13"
kiwisolver = "1.4.5"
legacy-api-wrap = "1.4"
leidenalg = "0.10.2"
llvmlite = "0.43.0"
MarkupSafe = "2.1.5"
matplotlib = "3.9.1"
matplotlib-inline = "0.1.7"
mistune = "3.0.2"
mpmath = "1.3.0"
natsort = "8.4.0"
nbclient = "0.10.0"
nbconvert = "7.16.4"
nbformat = "5.10.4"
nest-asyncio = "1.6.0"
networkx = "3.3"
notebook = "7.2.2"
notebook_shim = "0.2.4"
numba = "0.60.0"
numpy = "1.26.4"
nvidia-cublas-cu12 = "12.1.3.1"
nvidia-cuda-cupti-cu12 = "12.1.105"
nvidia-cuda-nvrtc-cu12 = "12.1.105"
nvidia-cuda-runtime-cu12 = "12.1.105"
nvidia-cudnn-cu12 = "9.1.0.70"
nvidia-cufft-cu12 = "11.0.2.54"
nvidia-curand-cu12 = "10.3.2.106"
nvidia-cusolver-cu12 = "11.4.5.107"
nvidia-cusparse-cu12 = "12.1.0.106"
nvidia-nvtx-cu12 = "12.1.105"
overrides = "7.7.0"
packaging = "24.1"
pandas = "2.2.2"
pandocfilters = "1.5.1"
parse = "1.20.2"
parso = "0.8.4"
pexpect = "4.9.0"
pillow = "10.4.0"
platformdirs = "4.3.6"
ply = "3.11"
prometheus_client = "0.21.0"
prompt_toolkit = "3.0.48"
protobuf = "5.27.3"
psutil = "6.0.0"
ptyprocess = "0.7.0"
pure_eval = "0.2.3"
pycparser = "2.22"
pyglmnet = "1.1"
Pygments = "2.18.0"
pynndescent = "0.5.13"
pynvml = "11.5.3"
Pyomo = "6.8.0"
python-dateutil = "2.9.0.post0"
python-json-logger = "2.0.7"
pytorch-ignite = "0.5.0.post2"
pyzmq = "26.2.0"
referencing = "0.35.1"
requests = "2.32.3"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rpds-py = "0.20.0"
scanpy = "1.10.2"
scikit-learn = "1.5.1"
scipy = "1.14.0"
seaborn = "0.13.2"
Send2Trash = "1.8.3"
session_info = "1.0.0"
six = "1.16.0"
sniffio = "1.3.1"
soupsieve = "2.6"
sparse = "0.15.4"
sparsecca = "0.3.1"
stack-data = "0.6.3"
sympy = "1.13.1"
terminado = "0.18.1"
threadpoolctl = "3.5.0"
tinycss2 = "1.3.0"
tomli = "2.0.2"
torch = "2.4.0"
tornado = "6.4.1"
tqdm = "4.66.5"
traitlets = "5.14.3"
types-python-dateutil = "2.9.0.20241003"
typing_extensions = "4.12.2"
tzdata = "2024.1"
umap-learn = "0.5.6"
uri-template = "1.3.0"
urllib3 = "2.2.3"
wcwidth = "0.2.13"
webcolors = "24.8.0"
webencodings = "0.5.1"
websocket-client = "1.8.0"
widgetsnbextension = "4.0.13"
harmonypy = "^0.0.10"
mofapy2 = "^0.7.2"
POT = "^0.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
